--- a/src/main/resources/fxml/raceSetupStage.fxml
+++ b/src/main/resources/fxml/raceSetupStage.fxml
@@ -1,56 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.geometry.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.bulck.smartrace.view.controller.RaceSetupStageController">
+<VBox prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.bulck.smartrace.view.controller.RaceSetupStageController">
    <children>
-      <VBox layoutX="220.0" layoutY="14.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+      <Label text="%stage.race-setup.title">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
+      <Label text="%stage.race-setup.instructions" wrapText="true" />
+      <GridPane vgap="5.0">
+        <columnConstraints>
+          <ColumnConstraints maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="490.0" prefWidth="490.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="75.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <VBox.margin>
+            <Insets top="20.0" />
+         </VBox.margin>
          <children>
-            <Label text="%stage.race-setup.title">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
-            <Label text="%stage.race-setup.instructions" wrapText="true" />
-            <GridPane vgap="5.0">
-              <columnConstraints>
-                <ColumnConstraints minWidth="75.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="490.0" prefWidth="490.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="75.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
-               <children>
-                  <Label fx:id="fileLabel" text="%stage.race-setup.field.file.label" />
-                  <Label fx:id="nameLabel" text="%model.race.name" GridPane.rowIndex="1" />
-                  <Label fx:id="locationLabel" text="%model.race.location" GridPane.rowIndex="2" />
-                  <Label fx:id="descriptionLabel" alignment="TOP_LEFT" contentDisplay="TOP" text="%model.race.description" GridPane.rowIndex="3" GridPane.valignment="TOP" />
-                  <TextField fx:id="fileTextField" onMouseClicked="#handleOpenFileChooser" GridPane.columnIndex="1" />
-                  <TextField fx:id="nameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField fx:id="locationTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <TextArea fx:id="descriptionTextArea" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-               </children>
-            </GridPane>
-            <HBox alignment="TOP_RIGHT" prefHeight="28.0" prefWidth="590.0" spacing="5.0">
-               <children>
-                  <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#handleCancel" text="%stage.race-setup.button.cancel" />
-                  <Button fx:id="createButton" mnemonicParsing="false" onAction="#handleCreateRace" text="%stage.race-setup.button.create" />
-               </children>
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
-            </HBox>
+            <Label fx:id="fileLabel" text="%stage.race-setup.field.file.label" />
+            <Label fx:id="nameLabel" text="%model.race.name" GridPane.rowIndex="1" />
+            <Label fx:id="locationLabel" text="%model.race.location" GridPane.rowIndex="2" />
+            <Label fx:id="descriptionLabel" alignment="TOP_LEFT" contentDisplay="TOP" text="%model.race.description" GridPane.rowIndex="3" GridPane.valignment="TOP" />
+            <TextField fx:id="fileTextField" onMouseClicked="#handleOpenFileChooser" GridPane.columnIndex="1" />
+            <TextField fx:id="nameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="locationTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextArea fx:id="descriptionTextArea" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
-      </VBox>
+      </GridPane>
+      <HBox alignment="TOP_RIGHT" prefHeight="28.0" prefWidth="590.0" spacing="5.0">
+         <children>
+            <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#handleCancel" text="%stage.race-setup.button.cancel" />
+            <Button fx:id="createButton" defaultButton="true" mnemonicParsing="false" onAction="#handleCreateRace" text="%stage.race-setup.button.create" />
+         </children>
+         <VBox.margin>
+            <Insets top="20.0" />
+         </VBox.margin>
+      </HBox>
    </children>
-</AnchorPane>
+   <padding>
+      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+   </padding>
+</VBox>
