--- a/src/main/resources/fxml/raceStage.fxml
+++ b/src/main/resources/fxml/raceStage.fxml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.input.KeyCodeCombination?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -13,9 +20,9 @@
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <TitledPane animated="false" prefHeight="125.0" prefWidth="600.0" text="%stage.race.view.info.title">
+            <TitledPane text="%stage.race.view.info.title">
                <content>
-                  <GridPane prefHeight="30.0" prefWidth="598.0" style="-fx-background-color: #E2E6E5;">
+                  <GridPane prefHeight="30.0" prefWidth="598.0" style="-fx-background-color: #E2E6E5;" vgap="10.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="139.0" />
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="484.0" minWidth="10.0" prefWidth="439.0" />
@@ -43,6 +50,65 @@
                   </GridPane>
                </content>
             </TitledPane>
+            <TitledPane fx:id="timerTitledPane" text="%stage.race.view.timer.title">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" />
+              </content>
+            </TitledPane>
          </children></VBox>
    </center>
+   <top>
+      <MenuBar BorderPane.alignment="CENTER">
+        <menus>
+          <Menu mnemonicParsing="false" text="%stage.race.menu.file">
+            <items>
+                  <MenuItem fx:id="openMenuItem" mnemonicParsing="false" text="%stage.race.menu.file.open">
+                     <accelerator>
+                        <KeyCodeCombination alt="UP" code="O" control="UP" meta="DOWN" shift="UP" shortcut="UP" />
+                     </accelerator>
+                  </MenuItem>
+                  <MenuItem fx:id="saveMenuItem" mnemonicParsing="false" text="%stage.race.menu.file.save">
+                     <accelerator>
+                        <KeyCodeCombination alt="UP" code="S" control="UP" meta="DOWN" shift="UP" shortcut="UP" />
+                     </accelerator>
+                  </MenuItem>
+              <MenuItem fx:id="closeMenuItem" mnemonicParsing="false" onAction="#handleQuit" text="%stage.race.menu.file.close">
+                     <accelerator>
+                        <KeyCodeCombination alt="UP" code="W" control="UP" meta="DOWN" shift="UP" shortcut="UP" />
+                     </accelerator>
+                  </MenuItem>
+                  <MenuItem fx:id="quitMenuItem" mnemonicParsing="false" onAction="#handleQuit" text="%stage.race.menu.file.quit">
+                     <accelerator>
+                        <KeyCodeCombination alt="UP" code="Q" control="UP" meta="DOWN" shift="UP" shortcut="UP" />
+                     </accelerator>
+                  </MenuItem>
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="%stage.race.menu.race">
+            <items>
+              <MenuItem fx:id="tracksMenuItem" mnemonicParsing="false" onAction="#handleOpenTrackManager" text="%stage.race.menu.race.tracks" />
+                  <MenuItem fx:id="categoriesMenuItem" mnemonicParsing="false" text="%stage.race.menu.race.categories" />
+                  <MenuItem fx:id="racersMenuItem" mnemonicParsing="false" text="%stage.race.menu.race.racers" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="%stage.race.menu.help">
+            <items>
+              <MenuItem fx:id="aboutMenuItem" mnemonicParsing="false" text="%stage.race.menu.help.about" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+   </top>
+   <left>
+      <VBox prefHeight="371.0" prefWidth="52.0" spacing="30.0" style="-fx-background-color: #EBEBEB;" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="tracksButton" mnemonicParsing="false" onAction="#handleOpenTrackManager" />
+            <Button fx:id="categoriesButton" mnemonicParsing="false" />
+            <Button fx:id="racersButton" mnemonicParsing="false" />
+         </children>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
+      </VBox>
+   </left>
 </BorderPane>
