--- a/src/main/resources/fxml/welcomeStage.fxml
+++ b/src/main/resources/fxml/welcomeStage.fxml
@@ -1,60 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.17391304347826086" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.bulck.smartrace.view.controller.WelcomeStageController">
+<SplitPane dividerPositions="0.17391304347826086" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.bulck.smartrace.view.controller.WelcomeStageController">
   <items>
     <AnchorPane minHeight="0.0" minWidth="170.0" prefHeight="160.0" prefWidth="170.0" />
-    <AnchorPane minHeight="0.0" minWidth="350.0" prefHeight="160.0" prefWidth="350.0">
+      <VBox prefHeight="200.0" prefWidth="100.0">
          <children>
-            <VBox layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+            <Label text="%stage.welcome.instructions.paragraph.1">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="30.0" />
+               </VBox.margin>
+            </Label>
+            <Label text="%stage.welcome.instructions.paragraph.2" textOverrun="WORD_ELLIPSIS" wrapText="true" />
+            <Label text="%stage.welcome.instructions.paragraph.3" textOverrun="WORD_ELLIPSIS" wrapText="true" />
+            <HBox prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin>
                <children>
-                  <Label text="%stage.welcome.instructions.paragraph.1">
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets bottom="30.0" />
-                     </VBox.margin>
-                  </Label>
-                  <Label text="%stage.welcome.instructions.paragraph.2" textOverrun="WORD_ELLIPSIS" wrapText="true" />
-                  <Label text="%stage.welcome.instructions.paragraph.3" textOverrun="WORD_ELLIPSIS" wrapText="true" />
-                  <HBox prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
-                     <VBox.margin>
-                        <Insets top="30.0" />
-                     </VBox.margin>
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
-                           <children>
-                              <Button fx:id="createButton" mnemonicParsing="false" onAction="#handleCreateRace">
-                                 <VBox.margin>
-                                    <Insets bottom="5.0" />
-                                 </VBox.margin>
-                              </Button>
-                              <Label text="%stage.welcome.button.create" />
-                           </children>
-                           <HBox.margin>
-                              <Insets />
-                           </HBox.margin>
-                        </VBox>
-                        <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
-                           <children>
-                              <Button fx:id="loadButton" mnemonicParsing="false">
-                                 <VBox.margin>
-                                    <Insets bottom="5.0" />
-                                 </VBox.margin>
-                              </Button>
-                              <Label text="%stage.welcome.button.load" />
-                           </children>
-                        </VBox>
+                        <Button fx:id="createButton" mnemonicParsing="false" onAction="#handleCreateRace">
+                           <VBox.margin>
+                              <Insets bottom="5.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Label text="%stage.welcome.button.create" />
                      </children>
-                  </HBox>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </VBox>
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+                     <children>
+                        <Button fx:id="loadButton" mnemonicParsing="false">
+                           <VBox.margin>
+                              <Insets bottom="5.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Label text="%stage.welcome.button.load" />
+                     </children>
+                  </VBox>
                </children>
-            </VBox>
-         </children></AnchorPane>
+            </HBox>
+         </children>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
+      </VBox>
   </items>
 </SplitPane>
