--- a/src/main/resources/fxml/raceStage.fxml
+++ b/src/main/resources/fxml/raceStage.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -89,6 +90,8 @@
               <MenuItem fx:id="tracksMenuItem" mnemonicParsing="false" onAction="#handleOpenTrackManager" text="%stage.race.menu.race.tracks" />
                   <MenuItem fx:id="categoriesMenuItem" mnemonicParsing="false" text="%stage.race.menu.race.categories" />
                   <MenuItem fx:id="racersMenuItem" mnemonicParsing="false" text="%stage.race.menu.race.racers" />
+                  <SeparatorMenuItem mnemonicParsing="false" />
+                  <MenuItem fx:id="preferencesMenuItem" mnemonicParsing="false" onAction="#handleOpenPreferences" text="%stage.race.menu.race.preferences" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="%stage.race.menu.help">
@@ -105,6 +108,7 @@
             <Button fx:id="tracksButton" mnemonicParsing="false" onAction="#handleOpenTrackManager" />
             <Button fx:id="categoriesButton" mnemonicParsing="false" />
             <Button fx:id="racersButton" mnemonicParsing="false" />
+            <Button fx:id="preferencesButton" mnemonicParsing="false" onAction="#handleOpenPreferences" />
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
